# bazarr-bitmap-ocr

./: .gitignore  Dockerfile  README.md  docker-compose.example.yml  entrypoint.sh
ocr_service/: Cargo.toml
ocr_service/src/: config.rs  main.rs  pgs.rs  translate.rs  vobsub.rs
provider/: bitmap_embedded_subtitles.py  subtitle_translator.py
